Change Thymeleaf to Rocker

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,12 +8,17 @@ micronaut:
 
 datasources:
   default:
-    url: jdbc:mysql://${MYSQL_HOSTNAME:localhost}:${MYSQL_PORT:3306}/${DATABASE:todo}?useSSL=false&serverTimezone=UTC
-    driverClassName: com.mysql.cj.jdbc.Driver
-    username: ${MYSQL_USERNAME:todo}
-    password: ${MYSQL_PASSWORD:123456}
+    url: ${JDBC_URL:`jdbc:h2:mem:default;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE`}
+    username: ${JDBC_USER:sa}
+    password: ${JDBC_PASSWORD:""}
+    driverClassName: ${JDBC_DRIVER:org.h2.Driver}
+#datasources:
+#  default:
+#    url: jdbc:mysql://${MYSQL_HOSTNAME:localhost}:${MYSQL_PORT:3306}/${DATABASE:todo}?useSSL=false&serverTimezone=UTC
+#    driverClassName: com.mysql.cj.jdbc.Driver
+#    username: ${MYSQL_USERNAME:todo}
+#    password: ${MYSQL_PASSWORD:123456}
     schema-generate: CREATE_DROP
-    dialect: MYSQL
 
 jpa:
   default:
