--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,18 @@
 plugins {
     id "net.ltgt.apt-eclipse" version "0.21"
     id "com.github.johnrengelman.shadow" version "5.0.0"
+    id "com.fizzed.rocker" version "1.3.0"
     id "application"
 }
 
 
+sourceSets {
+    main {
+        rocker {
+            srcDir('src/main/resources')
+        }
+    }
+}
 
 version "0.1"
 group "micronaut.todo.app"
@@ -24,10 +32,13 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
-    annotationProcessor 'io.micronaut.data:micronaut-data-processor:1.0.0.M5'
-    compile 'io.micronaut.data:micronaut-data-hibernate-jpa:1.0.0.M5'
+    annotationProcessor "io.micronaut.data:micronaut-data-processor:1.0.2"
+    implementation "io.micronaut.data:micronaut-data-hibernate-jpa:1.0.2"
+
     runtime 'io.micronaut.configuration:micronaut-jdbc-hikari'
-    runtimeOnly 'mysql:mysql-connector-java:8.0.18'
+    runtime "com.h2database:h2"
+
+    implementation 'com.fizzed:rocker-runtime:1.3.0'
 
     annotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
     annotationProcessor "io.micronaut:micronaut-inject-java"
@@ -41,7 +52,7 @@ dependencies {
     implementation "io.micronaut:micronaut-http-server-netty"
     implementation "io.micronaut:micronaut-http-client"
     runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
-    runtimeOnly 'org.thymeleaf:thymeleaf:3.0.11.RELEASE'
+
     testAnnotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
     testImplementation platform("io.micronaut:micronaut-bom:$micronautVersion")
