--- a/charts/gradle/values.yaml
+++ b/charts/gradle/values.yaml
@@ -44,7 +44,7 @@ canary:
   host: acme.com
 
 service:
-  name: micronaut-todo-app
+  name: jenkins-x-kubernetes
   type: ClusterIP
   externalPort: 80
   internalPort: 8080
