--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation "javax.annotation:javax.annotation-api"
     implementation "io.micronaut:micronaut-http-server-netty"
     implementation "io.micronaut:micronaut-http-client"
+    implementation "io.micronaut:micronaut-management"
+    
     runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
 
     testAnnotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
