--- a/charts/micronaut-todo-app/values.yaml
+++ b/charts/micronaut-todo-app/values.yaml
@@ -58,7 +58,7 @@ resources:
   requests:
     cpu: 400m
     memory: 512Mi
-probePath: /actuator/health
+probePath: /health
 livenessProbe:
   initialDelaySeconds: 60
   periodSeconds: 10
